Correcion de compatibilidad con arquitectura limpia